fix homepage spacing

--- a/src/components/HomePage/style/homePage.scss
+++ b/src/components/HomePage/style/homePage.scss
@@ -50,7 +50,7 @@ body {
   position: absolute;
   width: 218px;
   height: 67px;
-  left: 315px;
+  left: 325px;
   top: 348px;
 
   font-family: Roboto;
